test/fail_compile/div_zero.tas
.word (1 / (1 - 1))
